--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "syntax-dynamic-import",
-    "dynamic-import-webpack"
+    "syntax-dynamic-import"
   ]
 }
