--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 				"@babel/preset-react": "^7.0.0-beta.42",
 				"babel-eslint": "^8.2.2",
 				"babel-loader": "^8.0.0-beta",
-				"babel-plugin-dynamic-import-webpack": "^1.0.2",
 				"concurrently": "^3.5.1",
 				"eslint": "^4.18.2",
 				"eslint-config-airbnb": "^16.1.0",
@@ -27,7 +26,8 @@
 				"webpack-dev-server": "^3.1.1"
 		},
 		"scripts": {
-				"prebuild": "lerna exec --parallel -- rimraf lib",
+				"prebuild": "lerna exec --parallel -- rimraf lib dist",
+				"bootstrap": "lerna bootstrap --use-workspaces",
 				"dev": "concurrently \"yarn watch\" \"lerna run dev --stream\"",
 				"lint": "lerna exec --parallel -- eslint .",
 				"build": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc && lerna run build:webpack",
