--- a/packages/orchestra/package.json
+++ b/packages/orchestra/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "orchestra",
+  "name": "@dkez/orchestra",
   "version": "0.0.1",
   "main": "lib/index.js",
   "license": "MIT",
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
-    "async-leaf": "^1.0.0",
-    "leaf": "^1.0.0",
+    "@dkez/async-leaf": "^0.0.1",
+    "@dkez/leaf": "^0.0.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-loadable": "^5.3.1"
+    "react-loadable": "^5.3.1",
+    "react-router-dom": "^4.2.2"
   },
   "scripts": {
     "dev": "webpack-dev-server --mode development",
