--- a/packages/leaf/package.json
+++ b/packages/leaf/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "leaf",
-  "version": "1.0.0",
+  "name": "@dkez/leaf",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "react": "^16.2.0"
   }
