--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
 				"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.42",
 				"@babel/preset-env": "^7.0.0-beta.42",
 				"@babel/preset-react": "^7.0.0-beta.42",
+				"babel-core": "^7.0.0-0",
 				"babel-eslint": "^8.2.2",
+				"babel-jest": "^23.0.0-alpha.0",
 				"babel-loader": "^8.0.0-beta",
 				"concurrently": "^3.5.1",
 				"eslint": "^4.18.2",
 				"eslint-config-airbnb": "^16.1.0",
 				"eslint-plugin-import": "^2.9.0",
+				"eslint-plugin-jest": "^21.15.0",
 				"eslint-plugin-jsx-a11y": "^6.0.3",
 				"eslint-plugin-react": "^7.7.0",
 				"html-loader": "^0.5.5",
 				"html-webpack-plugin": "^3.0.6",
+				"jest": "^22.4.2",
 				"lerna": "^2.9.0",
 				"source-map-loader": "^0.2.3",
 				"webpack": "^4.1.1",
@@ -26,12 +30,15 @@
 				"webpack-dev-server": "^3.1.1"
 		},
 		"scripts": {
-				"prebuild": "lerna exec --parallel -- rimraf lib dist",
-				"bootstrap": "lerna bootstrap --use-workspaces",
+				"prebuild": "git clean -fdx packages -e packages/*/node_modules",
+				"bootstrap": "lerna bootstrap",
 				"dev": "concurrently \"yarn watch\" \"lerna run dev --stream\"",
-				"lint": "lerna exec --parallel -- eslint src",
-				"build": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc && lerna run build:webpack",
+				"lint": "eslint --cache --ignore-path .gitignore ./packages/*/src",
+				"test": "jest",
+				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc",
+				"build:webpack": "lerna run build:webpack",
+				"build": "yarn build:babel && yarn build:webpack",
 				"release": "yarn lint && yarn build && lerna publish",
-				"watch": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc -w"
+				"watch": "yarn build:babel -- -w"
 		}
 }
