--- a/packages/leaf/package.json
+++ b/packages/leaf/package.json
@@ -7,6 +7,7 @@
     "access": "public"
   },
   "dependencies": {
-    "react": "^16.2.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
