--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 		"private": true,
+		"homepage": "https://dmk255.github.io/lerna-webpack-example/",
 		"workspaces": [
 				"packages/*"
 		],
@@ -17,6 +18,7 @@
 				"eslint-plugin-import": "^2.9.0",
 				"eslint-plugin-jsx-a11y": "^6.0.3",
 				"eslint-plugin-react": "^7.7.0",
+				"gh-pages": "^1.1.0",
 				"html-loader": "^0.5.5",
 				"html-webpack-plugin": "^3.0.6",
 				"lerna": "^2.9.0",
@@ -32,6 +34,8 @@
 				"lint": "lerna exec --parallel -- eslint src",
 				"build": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc && lerna run build:webpack",
 				"release": "yarn lint && yarn build && lerna publish",
+				"predeploy": "yarn build",
+				"deploy": "gh-pages -d packages/orchestra/dist",
 				"watch": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc -w"
 		}
 }
