Update Babel, add TS, etc.

--- a/package.json
+++ b/package.json
@@ -1,48 +1,55 @@
 {
-		"private": true,
-		"homepage": "https://dmk255.github.io/lerna-webpack-example/",
-		"workspaces": [
-				"packages/*"
-		],
-		"devDependencies": {
-				"@babel/cli": "^7.0.0-beta.42",
-				"@babel/core": "^7.0.0-beta.42",
-				"@babel/plugin-syntax-dynamic-import": "^7.0.0-beta.42",
-				"@babel/preset-env": "^7.0.0-beta.42",
-				"@babel/preset-react": "^7.0.0-beta.42",
-				"babel-core": "^7.0.0-0",
-				"babel-eslint": "^8.2.2",
-				"babel-jest": "^23.0.0-alpha.0",
-				"babel-loader": "^8.0.0-beta",
-				"concurrently": "^3.5.1",
-				"eslint": "^4.18.2",
-				"eslint-config-airbnb": "^16.1.0",
-				"eslint-plugin-import": "^2.9.0",
-				"eslint-plugin-jest": "^21.15.0",
-				"eslint-plugin-jsx-a11y": "^6.0.3",
-				"eslint-plugin-react": "^7.7.0",
-				"gh-pages": "^1.1.0",
-				"html-loader": "^0.5.5",
-				"html-webpack-plugin": "^3.0.6",
-				"jest": "^22.4.2",
-				"lerna": "^2.9.0",
-				"source-map-loader": "^0.2.3",
-				"webpack": "^4.1.1",
-				"webpack-cli": "^2.0.12",
-				"webpack-dev-server": "^3.1.1"
-		},
-		"scripts": {
-				"prebuild": "git clean -fdx packages -e packages/*/node_modules",
-				"bootstrap": "lerna bootstrap",
-				"dev": "concurrently \"yarn watch\" \"lerna run dev --stream\"",
-				"lint": "eslint --cache --ignore-path .gitignore ./packages/*/src",
-				"test": "jest",
-				"build:babel": "lerna exec --parallel -- babel src -d lib --config-file ../../.babelrc",
-				"build:webpack": "lerna run build:webpack",
-				"build": "yarn build:babel && yarn build:webpack",
-				"release": "yarn lint && yarn build && lerna publish",
-				"watch": "yarn build:babel -- -w",
-				"predeploy": "yarn build",
-				"deploy": "gh-pages -d packages/orchestra/dist"
-		}
+  "private": true,
+  "homepage": "https://dmk255.github.io/lerna-webpack-example/",
+  "workspaces": [
+    "packages/*"
+  ],
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/jest": "^24.0.0",
+    "@types/react": "^16.8.2",
+    "@types/react-dom": "^16.8.0",
+    "@types/react-router-dom": "^4.3.1",
+    "@typescript-eslint/parser": "^1.3.0",
+    "babel-eslint": "^10.0.0",
+    "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.0",
+    "eslint": "^5.0.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jest": "^21.15.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "gh-pages": "^1.1.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.0.6",
+    "jest": "^24.0.0",
+    "lerna": "^3.11.0",
+    "prettier": "^1.16.4",
+    "source-map-loader": "^0.2.3",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-plugin-prettier": "^2.0.1",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.3.3",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.0.0",
+    "webpack-dev-server": "^3.0.0"
+  },
+  "scripts": {
+    "prebuild": "git clean -fdx packages -e packages/*/node_modules",
+    "bootstrap": "lerna bootstrap",
+    "lint": "eslint --cache --ignore-path .gitignore ./packages/*/src/**.jsx",
+    "lint:ts": "yarn tslint -c tslint.json -p tsconfig-lint.json --fix",
+    "test": "jest",
+    "build": "yarn tsc -b && lerna run build:webpack",
+    "dev": "lerna run dev --stream",
+    "deploy": "gh-pages -d packages/router/dist"
+  }
 }
